--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Untitled ITCS 4231 Project.sln"
+    "dotnet.defaultSolution": "ITCS-4231.sln"
 }
